# fapi-book

./: .gitignore  README.md  main.py  pyproject.toml
fapi_book/model/: model.py
fapi_book/templates/: home.html  todo.html
fapi_book/web/: todo.py
